<resources>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="ff_regular">sans-serif-regular</string>


    <string name="app_name">@string/string_name</string>
    <string name="string_name">Исаков Владислав</string>
    <string name="string_vk_profile">Профиль VK</string>
    <string name="string_email">Email</string>
    <string name="string_phone_number">Мобильный телефон</string>
    <string name="string_projects_count_desc">Проектов</string>
    <string name="string_code_lines_desc">Написано строк кода</string>
    <string name="string_rating_desc">Рейтинг</string>
    <string name="string_repository">Репозиторий</string>
    <string name="string_about">О себе</string>

    <string name="string_phone_info">79001234567</string>
    <string name="string_mail_info">isakovvd@yandex.ru</string>
    <string name="string_vk_info">https://vk.com/id6509564</string>
    <string name="string_github_info">https://github.com/isakovvd/DevIntensive</string>
    <string name="string_inform">Метеорный дождь неустойчив. Спектральная картина традиционно оценивает экваториальный тропический год. Перигей выслеживает терминатор - это солнечное затмение предсказал ионянам Фалес Милетский. Бесспорно, женщина-космонавт оценивает спектральный класс.</string>

    <string name="string_value_1">5</string>
    <string name="string_value_2">100500</string>
    <string name="string_value_3">7</string>

    <string name="team">Команда</string>
    <string name="user_profile">Мой профиль</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="user_profile_placeholder_image_title">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_camera">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="chose_gallery_photo">Выберите фото</string>
    <string name="give_permission_message">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="allow_message">Разрешить</string>
    <string name="sing_in">ВОЙТИ</string>


    <string name="validation_msg_phone">Введите номер телефона в формате\n +x xxx xxx-xx-xx (от 11 до 20 цифр)</string>
    <string name="validation_msg_email">Недопустимый адрес электронной почты</string>
    <string name="validation_msg_vk">Адрес аккаунта VK должен иметь формат vk.com/ххх</string>
    <string name="validation_msg_git">Адрес аккаунта GitHub должен иметь формат github.com/ххх</string>
    <string name="err_msg_phone">Неверно! Формат: +x xxx xxx-xx-xx</string>
    <string name="err_msg_email">Неверный e-mail. Формат: xxx@xx.xx</string>
    <string name="err_msg_vk">Неверно! Формат: vk.com/ххх</string>
    <string name="err_msg_git">Неверно! Формат: github.com/ххх</string>

    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.email">Введите E-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>

    <string name="snackbar_msg.edit_on">Редактирование включено</string>
    <string name="snackbar_msg.data_saved">Данные сохранены</string>
    <string name="chooser_title.send_mail">Отправить письмо</string>
    <string name="snackbar_msg.permissions_request">Для корректной работы приложения необходимо дать требуемые разрешения</string>
    <string name="action.allow_permissions">Разрешить</string>
</resources>
