<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    style="@style/match_match"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_layout"
        style="@style/match_match"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout"
            style="@style/appbar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                style="@style/match_wrap"
                app:contentScrim="@color/colorPrimaryDark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/profile_img_height"
                    android:fitsSystemWindows="true">

                    <ImageView
                        android:id="@+id/user_profile_iv"
                        style="@style/user_image"/>

                    <RelativeLayout
                        android:id="@+id/profile_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_gray_background"
                        android:visibility="gone"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_above="@+id/photo_placeholder"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="@dimen/spacing_small_8"
                            android:fontFamily="sens-serif-medium"
                            android:text="@string/user_profile_placeholder_image_title"
                            android:textColor="@color/color_white"/>

                        <ImageView
                            android:id="@+id/photo_placeholder"
                            android:layout_width="@dimen/placeholder_photo_size_90"
                            android:layout_height="@dimen/placeholder_photo_size_90"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:layout_marginBottom="@dimen/size_medium_56"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_add_a_photo_black_24dp"/>
                    </RelativeLayout>
                </FrameLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    style="@style/toolbar"
                    android:titleTextColor="@color/color_white"
                    app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            style="@style/match_wrap"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                style="@style/match_wrap"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/infoBar">

                    <LinearLayout
                        style="@style/infoBarEl.side">

                        <TextView
                            style="@style/infoBarText.value"
                            android:text="@string/string_value_1"/>

                        <TextView
                            style="@style/infoBarText.description"
                            android:text="@string/string_rating_desc"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/infoBarSep">
                    </LinearLayout>

                    <LinearLayout
                        style="@style/infoBarEl.central">

                        <TextView
                            style="@style/infoBarText.value"
                            android:text="@string/string_value_2"/>

                        <TextView
                            style="@style/infoBarText.description"
                            android:text="@string/string_code_lines_desc"/>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/infoBarSep">
                    </LinearLayout>

                    <LinearLayout
                        style="@style/infoBarEl.side">

                        <TextView
                            style="@style/infoBarText.value"
                            android:text="@string/string_value_3"/>

                        <TextView
                            style="@style/infoBarText.description"
                            android:text="@string/string_projects_count_desc"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    style="@style/infoListItem">
                </LinearLayout>
                <!--email-->
                <LinearLayout
                    style="@style/infoItemEl">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/call_icon"/>

                    <LinearLayout
                        style="@style/infoContent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/phone_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/phone_et"
                                style="@style/infoEditText"
                                android:hint="@string/string_phone_number"
                                android:inputType="phone"
                                android:text="89123456789"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/call_phone_iv"
                        style="@style/icon.right"
                        android:src="@drawable/phone_icon"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/infoListItem">
                </LinearLayout>
                <!--email-->
                <LinearLayout
                    style="@style/infoItemEl">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/email_icon_black"/>

                    <LinearLayout
                        style="@style/infoContent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/email_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/email_et"
                                style="@style/infoEditText"
                                android:hint="@string/string_email"
                                android:inputType="textEmailAddress"
                                android:linksClickable="true"
                                android:text="@string/string_mail_info"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/send_email_iv"
                        style="@style/icon.right"
                        android:src="@drawable/send_icon"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/infoListItem">
                </LinearLayout>

                <LinearLayout
                    style="@style/infoItemEl">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/vk_icon"/>

                    <LinearLayout
                        style="@style/infoContent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/vk_profile_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/vk_et"
                                style="@style/infoEditText"
                                android:hint="@string/string_vk_profile"
                                android:inputType="textUri"
                                android:linksClickable="true"
                                android:text="@string/string_vk_info"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/show_vk_iv"
                        style="@style/icon.right"
                        android:src="@drawable/eye_icon"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/infoListItem">
                </LinearLayout>

                <LinearLayout
                    style="@style/infoItemEl">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/github_icon"/>

                    <LinearLayout
                        style="@style/infoContent">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/git_ti"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/git_et"
                                style="@style/infoEditText"
                                android:hint="@string/string_repository"
                                android:inputType="textUri"
                                android:linksClickable="true"
                                android:text="@string/string_github_info"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/show_git_iv"
                        style="@style/icon.right"
                        android:src="@drawable/eye_icon"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/infoListItem">
                </LinearLayout>
                <!--about-->
                <LinearLayout
                    style="@style/infoItemEl">

                    <ImageView
                        style="@style/icon.left"
                        android:src="@drawable/acc_icon"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_medium_32"
                        android:layout_marginRight="@dimen/spacing_normal_16"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/about_et"
                                style="@style/infoEditText"
                                android:hint="@string/string_about"
                                android:inputType="textMultiLine"
                                android:text="@string/string_inform"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <ImageView
                        style="@style/icon.right"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/match_wrap"
            android:layout_marginRight="@dimen/fab_right_space"
            android:src="@drawable/ic_create_black_24dp"
            app:layout_anchor="@id/appbar_layout"
            app:layout_anchorGravity="bottom|right"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigator_view"
        style="@style/match_match"
        android:layout_gravity="left"
        app:headerLayout="@layout/drawer"
        app:menu="@menu/drawer_menu">
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>