<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/reveal_effect_header"
    >

    <RelativeLayout
        android:id="@+id/relative_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/size_large_72"
        android:layout_marginRight="@dimen/size_large_72"
        android:background="@color/color_white"
        android:orientation="vertical">

        <View
            android:id="@+id/split"
            android:layout_width="@dimen/split_size_height"
            android:layout_height="@dimen/spacing_medial_24"
            android:layout_marginTop="@dimen/spacing_little_medium_28"
            android:background="@color/color_orange_dark"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_little_medium_28"
            android:layout_marginLeft="@dimen/spacing_little_medium_28"
            android:layout_marginRight="@dimen/spacing_little_medium_28"
            android:layout_marginTop="@dimen/spacing_little_medium_28">

            <TextView
                android:id="@+id/sing_in_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_little_medium_28"
                android:fontFamily="sans-serif"
                android:text="@string/sing_in"
                android:textColor="@color/color_orange_dark"
                android:textSize="@dimen/font_larger_22"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_til"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_big_medium_48"
                android:layout_below="@+id/sing_in_tv"
                android:layout_marginTop="@dimen/spacing_normal_16">

                <EditText
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:hint="@string/string_email"
                    android:inputType="textEmailAddress"
                    android:text="@string/string_mail_info"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_gray"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_til"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_big_medium_48"
                android:layout_below="@id/login_email_til"
                android:layout_marginTop="@dimen/spacing_normal_16">

                <EditText
                    android:id="@+id/login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:hint="Пароль"
                    android:inputType="textPassword"
                    android:text="Пароль"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_gray"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_medium_32"
                android:layout_below="@id/login_password_til"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/spacing_little_medium_28"
                android:layout_marginRight="@dimen/spacing_little_medium_28"
                android:layout_marginTop="@dimen/spacing_little_medium_28"
                android:background="@color/color_orange_dark"
                android:text="@string/sing_in"
                android:textColor="@color/color_white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spacing_normal_16"
                android:layout_below="@id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="Забыли пароль?"
                android:textColor="@color/color_gray"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>